--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -122,7 +122,7 @@
       </footer>
     </div>
     <!-- </body> JS -->
-    <script type="text/javascript" src="//code.jquery.com/jquery.min.js"></script>
+    <script type="text/javascript" src="@|uri-prefix|/js/jquery.min.js"></script>
     <script type="text/javascript" src="@|uri-prefix|/js/bootstrap.min.js"></script>
   </body>
 </html>
