--- a/_src/post-template.html
+++ b/_src/post-template.html
@@ -5,7 +5,7 @@
   </header>
   @|content|
   <footer>
-    @older/newer-links[older-uri older-title newer-uri newer-title]
+    @older/newer-links[older-uri older-title newer-uri newer-title #:for-bs 4]
     @disqus-comments["alex-hhh-github-com"]
   </footer>
 </article>
