--- a/_src/index-template.html
+++ b/_src/index-template.html
@@ -1,27 +1,23 @@
-<article>
-  <header>
+<div class"index-entry">
+  <div>
     <h2 class="index-entry"><a href='@|uri-path|'>@|title|</a></h2>
     <p class='date-and-tags'>@|date| :: @|tags|</p>
-  </header>
+  </div>
   @(if thumbnail
     @list{<div class="container">
             <div class="row">
-                <div id="content" class="col-md-2">
-                  <a href='@|uri-path|'><img class="rounded" src='@|thumbnail|'/></a>
-                </div>
-                <div id="content" class="col-md-10">
-                  @|content-only|
-                  @(when more?
-                    @list{<footer>
-                            <a href='@|uri-path|'>&hellip; more &hellip;</a>
-                          </footer>})
-                </div>
+              <div id="content" class="col-md-3 center-block zoom-on-hover">
+                <a href='@|uri-path|'><img class="rounded" src='@|thumbnail|'/></a>
+              </div>
+              <div id="content" class="col-md-9">
+                @|content-only|
+                @(when more?
+                @list{<div><a href='@|uri-path|'>&hellip; more &hellip;</a></div>})
+              </div>
             </div>
-          </div>}
-    @list{
-      @|content-only|
-      @(when more?
-        @list{<footer>
-                <a href='@|uri-path|'>&hellip; more &hellip;</a>
-              </footer>})})
-</article>
+  </div>}
+  @list{
+  @|content-only|
+  @(when more?
+  @list{<footer> <a href='@|uri-path|'>&hellip; more &hellip;</a> </footer>})})
+</div>
