--- a/index-4.html
+++ b/index-4.html
@@ -8,7 +8,7 @@
     <meta name="author"      content="Alex Harsányi">
     <meta name="keywords"    content="arduino, all, training data analysis, bike trainer, activitylog2, racket">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
-    <link rel="icon"      href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
     <link rel="canonical" href="https://alex-hhh.github.io/index-4.html">
 
 
@@ -51,8 +51,8 @@
             <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
                 Tags <b class="caret"></b></a>
-              <ul class="dropdown-menu" role="menu">
-                <a class="dropdown-item" href="/tags/activitylog2.html">activitylog2&nbsp<small>(5)</small></a><a class="dropdown-item" href="/tags/arduino.html">arduino&nbsp<small>(3)</small></a><a class="dropdown-item" href="/tags/bike-trainer.html">bike trainer&nbsp<small>(1)</small></a><a class="dropdown-item" href="/tags/racket.html">racket&nbsp<small>(20)</small></a><a class="dropdown-item" href="/tags/training-data-analysis.html">training data analysis&nbsp<small>(5)</small></a>
+              <ul class="dropdown-menu" role="menu" id="tags-menu-content">
+                <!-- will be filled in dynamically by custom.js -->
               </ul>
             </li>
             <li>
@@ -265,7 +265,8 @@
     </div>
     <!-- </body> JS -->
   <!-- NOTE: jQuery must be loaded first -->
-  <script type="text/javascript" src="/js/jquery-3.2.1.slim.min.js"></script>
+  <script type="text/javascript" src="/js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="/js/custom.js"></script>
   </body>
 </html>
