--- a/index-5.html
+++ b/index-5.html
@@ -6,7 +6,7 @@
     <title>The Blog of Alex Harsányi (page 5)</title>
     <meta name="description" content="The Blog of Alex Harsányi (page 5)">
     <meta name="author"      content="Alex Harsányi">
-    <meta name="keywords"    content="arduino, all, training data analysis, bike trainer, activitylog2, racket">
+    <meta name="keywords"    content="data visualization, training data analysis, bike trainer, activitylog2, racket, arduino, all">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
     <link rel="canonical" href="https://alex-hhh.github.io/index-5.html">
