--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -102,15 +102,10 @@
       </div>
       <footer>
         <hr />
-        <!-- <p>@twitter-follow-button["racketlang" "Follow RacketLang"]</p> -->
-        <p>Site generated
-          by <a href="https://github.com/greghendershott/frog">Frog</a>,
-          the <strong>fr</strong>ozen bl<strong>og</strong>
-          tool. Using <a href="http://twitter.github.com/bootstrap/index.html">Bootstrap</a>. Also
-          available as <a href="@|atom-feed-uri|">Atom</a>
-          and <a href="@|rss-feed-uri|">RSS</a> feeds. . There is also
-          a <a href="/Cookies.html">cookie policy</a>.</p>
-        <!-- <p><em>Your legal notice here</em>.</p> -->
+        <div class="fine-print">© Alex Harsányi, licensed under
+          <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
+          , and there's a <a href="/Cookies.html">cookie policy</a>.
+        </div>
       </footer>
     </div>
     <!-- </body> JS -->
