Tweaks to site visuals

--- a/About.html
+++ b/About.html
@@ -15,7 +15,6 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/pygments.css">
-    <link rel="stylesheet" type="text/css" href="/css/scribble.css">
     <link rel="stylesheet" type="text/css" href="/css/custom.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono&display=swap" rel="stylesheet">
     <!-- Feeds -->
@@ -99,14 +98,12 @@
 <p>I have a few hobby projects which I keep on <a href="https://github.com/alex-hhh">GitHub</a>, and you can find blog posts about them on this site.</p>
         </div>
 
+
       </div>
-      <footer>
-        <hr />
-        <div class="fine-print">© Alex Harsányi, licensed under
-          <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
-          , and there's a <a href="/Cookies.html">cookie policy</a>.
-        </div>
-      </footer>
+      <div class="fine-print">© Alex Harsányi, licensed under
+        <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
+        , and there's a <a href="/Cookies.html">cookie policy</a>.
+      </div>
     </div>
     <!-- </body> JS -->
   <!-- NOTE: jQuery must be loaded first -->
