--- a/Cookies.html
+++ b/Cookies.html
@@ -15,7 +15,6 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/pygments.css">
-    <link rel="stylesheet" type="text/css" href="/css/scribble.css">
     <link rel="stylesheet" type="text/css" href="/css/custom.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono&display=swap" rel="stylesheet">
     <!-- Feeds -->
@@ -111,14 +110,12 @@
 <p><a href="https://www.youtube.com">YouTube</a> is used to provide some video content which is embedded into articles on this site. YouTube will probably track you and record what videos you have viewed. To the video owner, YouTube provides some aggregate analytics, such as the number of times a video has been viewed.</p>
         </div>
 
+
       </div>
-      <footer>
-        <hr />
-        <div class="fine-print">© Alex Harsányi, licensed under
-          <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
-          , and there's a <a href="/Cookies.html">cookie policy</a>.
-        </div>
-      </footer>
+      <div class="fine-print">© Alex Harsányi, licensed under
+        <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
+        , and there's a <a href="/Cookies.html">cookie policy</a>.
+      </div>
     </div>
     <!-- </body> JS -->
   <!-- NOTE: jQuery must be loaded first -->
